crates/cella-codegen/src/schema/snapshots/cella_codegen__schema__resolve__tests__no_ref_passthrough.snap
---
source: crates/cella-codegen/src/schema/resolve.rs
expression: resolved
---
SchemaNode {
    title: None,
    description: Some(
        "a bool",
    ),
    deprecated: false,
    deprecation_message: None,
    schema_type: Some(
        Single(
            Boolean,
        ),
    ),
    properties: {},
    required: [],
    additional_properties: None,
    pattern_properties: {},
    items: None,
    one_of: [],
    all_of: [],
    any_of: [],
    enum_values: [],
    ref: None,
    minimum: None,
    maximum: None,
    pattern: None,
    format: None,
    default_value: None,
    unevaluated_properties: None,
    definitions: {},
}
