crates/cella-codegen/src/schema/snapshots/cella_codegen__schema__resolve__tests__ref_with_extra_constraints.snap
---
source: crates/cella-codegen/src/schema/resolve.rs
expression: resolved
---
SchemaNode {
    title: None,
    description: None,
    deprecated: false,
    deprecation_message: None,
    schema_type: Some(
        Single(
            Object,
        ),
    ),
    properties: {
        "name": SchemaNode {
            title: None,
            description: None,
            deprecated: false,
            deprecation_message: None,
            schema_type: Some(
                Single(
                    String,
                ),
            ),
            properties: {},
            required: [],
            additional_properties: None,
            pattern_properties: {},
            items: None,
            one_of: [],
            all_of: [],
            any_of: [],
            enum_values: [],
            ref: None,
            minimum: None,
            maximum: None,
            pattern: None,
            format: None,
            default_value: None,
            unevaluated_properties: None,
            definitions: {},
        },
        "extra": SchemaNode {
            title: None,
            description: None,
            deprecated: false,
            deprecation_message: None,
            schema_type: Some(
                Single(
                    Integer,
                ),
            ),
            properties: {},
            required: [],
            additional_properties: None,
            pattern_properties: {},
            items: None,
            one_of: [],
            all_of: [],
            any_of: [],
            enum_values: [],
            ref: None,
            minimum: None,
            maximum: None,
            pattern: None,
            format: None,
            default_value: None,
            unevaluated_properties: None,
            definitions: {},
        },
    },
    required: [],
    additional_properties: None,
    pattern_properties: {},
    items: None,
    one_of: [],
    all_of: [],
    any_of: [],
    enum_values: [],
    ref: None,
    minimum: None,
    maximum: None,
    pattern: None,
    format: None,
    default_value: None,
    unevaluated_properties: None,
    definitions: {},
}
