crates/cella-codegen/src/schema/snapshots/cella_codegen__schema__resolve__tests__resolve_through_items.snap
---
source: crates/cella-codegen/src/schema/resolve.rs
expression: resolved
---
SchemaNode {
    title: None,
    description: None,
    deprecated: false,
    deprecation_message: None,
    schema_type: Some(
        Single(
            Array,
        ),
    ),
    properties: {},
    required: [],
    additional_properties: None,
    pattern_properties: {},
    items: Some(
        SchemaNode {
            title: None,
            description: Some(
                "A foo string",
            ),
            deprecated: false,
            deprecation_message: None,
            schema_type: Some(
                Single(
                    String,
                ),
            ),
            properties: {},
            required: [],
            additional_properties: None,
            pattern_properties: {},
            items: None,
            one_of: [],
            all_of: [],
            any_of: [],
            enum_values: [],
            ref: None,
            minimum: None,
            maximum: None,
            pattern: None,
            format: None,
            default_value: None,
            unevaluated_properties: None,
            definitions: {},
        },
    ),
    one_of: [],
    all_of: [],
    any_of: [],
    enum_values: [],
    ref: None,
    minimum: None,
    maximum: None,
    pattern: None,
    format: None,
    default_value: None,
    unevaluated_properties: None,
    definitions: {},
}
